--- a/Views/ManagerFamily/Index.cshtml
+++ b/Views/ManagerFamily/Index.cshtml
@@ -1,17 +1,211 @@
 ﻿
-@{
-    Layout = null;
-}
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>工具夹类别管理</title>
+    <link rel="stylesheet" href="~/Content/bootstrap-table.min.css" />
+    <link href="~/Content/diy-bootstraptable.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-editable.css" />
+    <script src="~/Scripts/bootstrap-editable.min.js"></script>
+    <!--行内编辑-->
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="~/Scripts/bootstrap-table.min.js"></script>
+    <!-- Latest compiled and minified Locales -->
+    <script src="~/Scripts/bootstrap-table-zh-CN.min.js"></script>
+    <script src="~/Scripts/bootstrap-table-editable.min.js"></script>
+    <!-- 弹出框插件-->
+    <script src="~/Scripts/sweetalert2.min.js"></script>
+    <!-- 消息提示插件：toastr.js -->
+    <link href="~/Content/toastr/toastr.min.css" rel="stylesheet" />
+    <script src="~/Scripts/toastr.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/es6-promise.min.js "></script>
+    <script src="~/Scripts/es6-promise.auto.min.js "></script>
+    <!-- 图表插件 echarts -->
+    <script src="~/Scripts/echarts/echarts.min.js"></script>
+    <script src="~/Scripts/common.toastr.init.js"></script>
+    <script src="~/Scripts/common.form.validate.js"></script>
+    <script src="~/Scripts/common.bootstraptable.init.js"></script>
 </head>
 <body>
-    <div> 
+    <div class="panel-body" style="padding-bottom:0px;">
+        <div>
+            <!-- 工具栏 -->
+            <div id="toolbar" class="btn-group">
+                <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addFamilyModal">
+                    <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
+                    <span>新增</span>
+                </button>
+                <button id="btn_remove" type="button" class="btn btn-danger">
+                    <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
+                    <span>删除</span>
+                </button>
+            </div>
+            <table id="FamilyTable" class="table-striped"></table>
+            <!-- 添加 modal 框-->
+            <div class="modal fade" id="addFamilyModal" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog ">
+                    <div class="modal-content" sstyle="border-radius:5px">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title" id="myModalLabel">添加类别</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form id="addform" class="form-horizontal" action="##" method="post">
+                                <div class="form-group">
+                                    <label class="col-xs-4 control-label" for="name">类型名称</label>
+                                    <div class="col-xs-6">
+                                        <input class="form-control" name="name" id="name" type="text">
+                                    </div>
+                                </div>
+                               
+                                <div class="form-group modal-footer">
+                                    <div class="col-xs-6 col-xs-offset-4">
+                                        <button type="button" class="btn btn-danger" data-dismiss="modal">取消</button>
+                                        <button type="button" class="btn btn-warning" onclick="addFamily()">提交</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script type="text/javascript">
+        function addFamily() {
+            if (CheckFormNull("addform")) {
+                AddRecord("addform", "/ManagerFamily/AddFamilyRecord", "addFamilyModal", "FamilyTable");
+            }
+        }
+
+
+        //btn_remove 事件
+        $("#btn_remove").on("click", function () {
+
+            //获取选中数据
+            var id = []  ;
+            var jsonData = $.map($('#FamilyTable').bootstrapTable('getSelections'), function (row) {
+                return row;
+            });           
+          
+            for (i = 0; i < jsonData.length; i++) {
+                id[i] = jsonData[i].FamilyID;
+            }
+            var ids = id.join(';');
+            console.log(ids);
+            if (ids == null||ids=="") {
+                toastr.warning("请先选择要删除的记录!");
+                return;
+            }
+           
+            confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecords", "FamilyTable", ids);
+            var itable = TableInit();
+
+        })
+
+        // 行样式
+        function rowStyle(row, index) {
+            var classes = ['success', 'danger']
+            return { classes: classes[index % classes.length] };
+        }
+
+        //操作列事情
+        window.operationEvents = {
+            //编辑事件
+            'click #btn_update': function (e, value, row, index) {
+                console.log(222);
+                var record = new Array();
+                var Item = new Object();
+                Item.FamilyID = row.FamilyID;
+                Item.FamilyName = row.FamilyName;       
+                record.push(Item);
+                UpdateRecord("/ManagerFamily/EditFamilyRecord", JSON.stringify(record));
+            },
+            'click #btn_delete': function (e, value, row, index) {
+                console.log(111);
+                var record = new Array();
+                var Item = new Object();
+                Item.FamilyID = row.FamilyID;
+                Item.FamilyName = row.FamilyName;
+                record.push(Item);
+                confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecord", "FamilyTable", JSON.stringify(record));
+            }
+        }
+
+        /**
+         * 数据列
+         * */
+        var columns = [{
+            title: "全选", field: "select", checkbox: true
+        }, {
+            field: 'FamilyID',
+            title: '类型编号',
+            visable: true,
+            sortable: true,
+            align: 'center',
+        }, {
+            field: 'FamilyName',
+            title: '名称',
+            visable: true,
+            align: 'center',
+            editable: {
+                type: 'text',
+                title: '类型名称',
+                validate: function (value) {
+                    if (!value) return '类型名称不能为空';
+                },
+                noeditFormatter: function (value, row, index) {
+                    return diyFormatter(value, 'FamilyName');
+                }
+            }
+        }, {
+            field: 'Operation',
+            title: '操作',
+            //events: operationEvents,
+            align: 'center',
+            formatter: function (value, row, index) {
+                return [
+                    '<div class="btn-group">',
+                    '<div class="btn-group">',
+                    '<button id="btn_update"  type="button" class="btn btn-warning" onclick="update(this)" data-toggle="modal" data-target="#editOutRecordModal"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i><span></span></button>',
+                    '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i class="glyphicon glyphicon-remove" aria-hidden="true"  ></i><span></span></button>',
+                    '</div>'
+                ].join(' ');
+            }
+        },]
+
+        function del(obj) {
+         
+            FamilyID = obj.parentNode.parentNode.parentNode.previousSibling.previousSibling.innerHTML;
+            FamilyName = obj.parentNode.parentNode.parentNode.previousSibling.firstChild.text;
+            var record = FamilyID + ";" + FamilyName;
+            confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecord", "FamilyTable", record);
+            
+        }
+
+        function update(obj) {
+            FamilyID = obj.parentNode.parentNode.parentNode.previousSibling.previousSibling.innerHTML;
+            FamilyName = obj.parentNode.parentNode.parentNode.previousSibling.firstChild.text;
+            var record = FamilyID + ";" + FamilyName;
+            UpdateRecord("/ManagerFamily/EditFamilyRecord","FamilyTable", record);
+        }
+
+
+        /**
+         * table 初始化
+         * */
+        var TableInit = function () {
+            var FamilyTable = new Object();
+            FamilyTable = BoootstrapTableInit("FamilyTable", '/ManagerFamily/ReadFamilyRecord', rowStyle, columns)
+            return FamilyTable;
+        }
+
+        /**
+         * 调用 TableInit
+         * */
+        $(function () {
+            var itable = TableInit();//.初始化  Table
+        });</script>
 </body>
 </html>
