增加添加采购订单功能

--- a/Views/InRecord/Index.cshtml
+++ b/Views/InRecord/Index.cshtml
@@ -160,7 +160,7 @@
 
     <script type="text/javascript">
 
-        //添加g归还记录
+        //添加归还记录
         function addInRecord() {
             if (CheckFormNull("addform")) {
                 AddRecord("addform", "/InRecord/AddInRecord", "addInRecordModal", "inRecordTable");
