--- a/Views/FixturePurchase/FirstPass.cshtml
+++ b/Views/FixturePurchase/FirstPass.cshtml
@@ -30,88 +30,25 @@
 <body>
     <div class="panel-body" style="padding-bottom:0px;">
         <div>
-            <!-- 工具栏 -->
-            @*<div id="toolbar" class="btn-group">
-                <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addPurchaseModal">
-                    <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
-                    <span>新增</span>
-                </button>
-                <button id="btn_remove" type="button" class="btn btn-danger">
-                        <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
-                        <span>删除</span>
-                    </button>
-            </div>*@
             <table id="PurchaseTable" class="table-striped"></table>
         </div>
     </div>
 
     <script type="text/javascript">
-        function addApply() {
-            if (CheckFormNull("addform")) {
-                AddRecord("addform", "/FixturePurchase/AddPurChaseRecord", "addPurchaseModal", "PurchaseTable");
-            }
-        }
-
-
-        ////btn_remove 事件
-        //$("#btn_remove").on("click", function () {
-
-        //    //获取选中数据
-        //    var id = []  ;
-        //    var jsonData = $.map($('#FamilyTable').bootstrapTable('getSelections'), function (row) {
-        //        return row;
-        //    });
-
-        //    for (i = 0; i < jsonData.length; i++) {
-        //        id[i] = jsonData[i].FamilyID;
-        //    }
-        //    var ids = id.join(';');
-        //    console.log(ids);
-        //    if (ids == null||ids=="") {
-        //        toastr.warning("请先选择要删除的记录!");
-        //        return;
-        //    }
-
-        //    confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecords", "FamilyTable", ids);
-        //    var itable = TableInit();
-
-        //})
-
+ 
         // 行样式
         function rowStyle(row, index) {
             var classes = ['success', 'danger']
             return { classes: classes[index % classes.length] };
         }
 
-        ////操作列事情
-        //window.operationEvents = {
-        //    //编辑事件
-        //    'click #btn_update': function (e, value, row, index) {
-        //        console.log(222);
-        //        var record = new Array();
-        //        var Item = new Object();
-        //        Item.FamilyID = row.FamilyID;
-        //        Item.FamilyName = row.FamilyName;
-        //        record.push(Item);
-        //        UpdateRecord("/ManagerFamily/EditFamilyRecord", "FamilyTable".JSON.stringify(record));
-        //    },
-        //    'click #btn_delete': function (e, value, row, index) {
-        //        console.log(111);
-        //        var record = new Array();
-        //        var Item = new Object();
-        //        Item.FamilyID = row.FamilyID;
-        //        Item.FamilyName = row.FamilyName;
-        //        record.push(Item);
-        //        confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecords", "FamilyTable", JSON.stringify(record));
-        //    }
-        //}
+        
 
         /**
          * 数据列
          * */
-        var columns = [{
-            title: "全选", field: "select", checkbox: true
-        }, {
+        var columns = [
+            {
             field: 'AppBy',
             title: '用户编号',
             visable: true,
@@ -167,33 +104,26 @@
             formatter: function (value, row, index) {
                 return [
                     '<div class="btn-group">',
-                    '<div class="btn-group">',
-                    '<button id="btn_update"  type="button" class="btn btn-warning" onclick="update(this)" data-toggle="modal" data-target="#editOutRecordModal"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i><span></span></button>',
-                    '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i class="glyphicon glyphicon-remove" aria-hidden="true"  ></i><span></span></button>',
+                    '<button id="btn_update"  type="button" class="btn btn-success" onclick="update(this)" data-toggle="modal" ><i  aria-hidden="true"></i><span>初审通过√</span></button>',
+                    '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i  aria-hidden="true"  ></i><span>×驳回</span></button>',
                     '</div>'
                 ].join(' ');
             }
         },]
 
-        //function del(obj) {
+        function del(obj) {
+            Billno = obj.parentNode.parentNode.parentNode.childNodes[5].textContent;
+            State = "驳回";
+            var record = Billno + ";" + State;
+            UpdateRecord("/FixturePurchase/RebutApply", "PurchaseTable", record);
+        }
 
-        //    FamilyID = obj.parentNode.parentNode.parentNode.previousSibling.previousSibling.innerHTML;
-        //    FamilyName = obj.parentNode.parentNode.parentNode.previousSibling.firstChild.text;
-        //    var id = []  ;
-        //    id[0] = FamilyID;
-        //    var ids = id.join(';');
-
-        //    confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecords", "FamilyTable",ids);
-
-        //}
-
-        //function update(obj) {
-        //    FamilyID = obj.parentNode.parentNode.parentNode.previousSibling.previousSibling.innerHTML;
-        //    FamilyName = obj.parentNode.parentNode.parentNode.previousSibling.firstChild.text;
-        //    var record = FamilyID + ";" + FamilyName;
-        //    c
-        //    UpdateRecord("/ManagerFamily/EditFamilyRecord","FamilyTable", record);
-        //}
+        function update(obj) {
+            Billno = obj.parentNode.parentNode.parentNode.childNodes[5].textContent;
+            State = "终审";
+            var record = Billno + ";" + State;
+            UpdateRecord("/FixturePurchase/PassFirstApply", "PurchaseTable", record);
+        }
 
 
         /**
