--- a/Views/FixtureScrap/Apply.cshtml
+++ b/Views/FixtureScrap/Apply.cshtml
@@ -32,32 +32,22 @@
         <div>
             <!-- 工具栏 -->
             <div id="toolbar" class="btn-group">
-                <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addPurchaseModal">
+                <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addScrapModal">
                     <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
                     <span>新增</span>
                 </button>
-                @*<button id="btn_remove" type="button" class="btn btn-danger">
-                        <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
-                        <span>删除</span>
-                    </button>*@
             </div>
-            <table id="PurchaseTable" class="table-striped"></table>
+            <table id="ScrapTable" class="table-striped"></table>
             <!-- 添加 modal 框-->
-            <div class="modal fade" id="addPurchaseModal" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal fade" id="addScrapModal" tabindex="-1" role="dialog" aria-hidden="true">
                 <div class="modal-dialog ">
                     <div class="modal-content" sstyle="border-radius:5px">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title" id="myModalLabel">采购申请</h4>
+                            <h4 class="modal-title" id="myModalLabel">报废申请</h4>
                         </div>
                         <div class="modal-body">
                             <form id="addform" class="form-horizontal" action="##" method="post">
-                                <div class="form-group">
-                                    <label class="col-xs-4 control-label" for="familycode">类别代码</label>
-                                    <div class="col-xs-6">
-                                        <input class="form-control" name="familycode" id="familycode" type="text">
-                                    </div>
-                                </div>
                                 <div class=" form-group">
                                     <label class="col-xs-4 control-label" for="code">夹具代码</label>
                                     <div class="col-xs-6">
@@ -75,22 +65,9 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-xs-4 control-label" for="billNo">采购订单号</label>
+                                    <label class="col-xs-4 control-label" for="reason">申请原因</label>
                                     <div class="col-xs-6">
-                                        <input class="form-control" name="billNo" id="billNo" type="text">
-                                    </div>
-                                </div>
-                                <div class=" form-group">
-                                    <label class="col-xs-4 control-label" for="regDate">申请日期</label>
-                                    <div class="col-xs-6">
-                                        <input class="form-control datetimepick" name="regDate" id="regDate" type="text">
-                                    </div>
-                                </div>
-                                @* 待修改 *@
-                                <div class="form-group">
-                                    <label class="col-xs-4 control-label" for="pic">图片</label>
-                                    <div class="col-xs-6">
-                                        <input class="form-control" name="pic" id="pic" type="text">
+                                        <input class="form-control" name="reason" id="reason" type="text">
                                     </div>
                                 </div>
 
@@ -111,112 +88,56 @@
     <script type="text/javascript">
         function addApply() {
             if (CheckFormNull("addform")) {
-                AddRecord("addform", "/FixturePurchase/AddPurChaseRecord", "addPurchaseModal", "PurchaseTable");
+                AddRecord("addform", "/FixtureScrap/AddScrapRecord", "addScrapModal", "ScrapTable");
             }
         }
 
-
-        ////btn_remove 事件
-        //$("#btn_remove").on("click", function () {
-
-        //    //获取选中数据
-        //    var id = []  ;
-        //    var jsonData = $.map($('#FamilyTable').bootstrapTable('getSelections'), function (row) {
-        //        return row;
-        //    });
-
-        //    for (i = 0; i < jsonData.length; i++) {
-        //        id[i] = jsonData[i].FamilyID;
-        //    }
-        //    var ids = id.join(';');
-        //    console.log(ids);
-        //    if (ids == null||ids=="") {
-        //        toastr.warning("请先选择要删除的记录!");
-        //        return;
-        //    }
-
-        //    confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecords", "FamilyTable", ids);
-        //    var itable = TableInit();
-
-        //})
+   
 
         // 行样式
         function rowStyle(row, index) {
             var classes = ['success', 'danger']
             return { classes: classes[index % classes.length] };
         }
-
-        ////操作列事情
-        //window.operationEvents = {
-        //    //编辑事件
-        //    'click #btn_update': function (e, value, row, index) {
-        //        console.log(222);
-        //        var record = new Array();
-        //        var Item = new Object();
-        //        Item.FamilyID = row.FamilyID;
-        //        Item.FamilyName = row.FamilyName;
-        //        record.push(Item);
-        //        UpdateRecord("/ManagerFamily/EditFamilyRecord", "FamilyTable".JSON.stringify(record));
-        //    },
-        //    'click #btn_delete': function (e, value, row, index) {
-        //        console.log(111);
-        //        var record = new Array();
-        //        var Item = new Object();
-        //        Item.FamilyID = row.FamilyID;
-        //        Item.FamilyName = row.FamilyName;
-        //        record.push(Item);
-        //        confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecords", "FamilyTable", JSON.stringify(record));
-        //    }
-        //}
+        
 
         /**
          * 数据列
          * */
-        var columns = [{
-            title: "全选", field: "select", checkbox: true
-        }, {
-            field: 'AppBy',
+        var columns = [
+             {
+            field: 'ScrapBy',
             title: '用户编号',
             visable: true,
             sortable: true,
             align: 'center',
         }, {
-            field: 'AppByName',
+            field: 'ScrapByName',
             title: '用户名',
             visable: true,
             align: 'center',
 
             }, {
-                field: 'FamilyID',
-                title: '类型编号',
-                visable: true,
-                align: 'center',
-            },{
                 field: 'Code',
                 title: '夹具编号',
                 visable: true,
                 align: 'center',
             }, {
-                field: 'SeqID',
+                field: 'SeqId',
                 title: '夹具序列号',
                 visable: true,
                 align: 'center',
             }, {
-                field: 'BillNo',
-                title: '采购单号',
+                field: 'UsedCount',
+                title: '物品寿命计数',
                 visable: true,
                 align: 'center',
             }, {
-                field: 'RegDate',
-                title: '采购时间',
+                field: 'ScrapReason',
+                title: '报废原因',
                 visable: true,
                 align: 'center',
-            }, {
-                field: 'Pic',
-                title: '图片',
-                visable: true,
-                align: 'center',
-            }, {
+            },  {
                 field: 'State',
                 title: '审查状态',
                 visable: true,
@@ -230,33 +151,21 @@
             formatter: function (value, row, index) {
                 return [
                     '<div class="btn-group">',
-                    '<div class="btn-group">',
-                    '<button id="btn_update"  type="button" class="btn btn-warning" onclick="update(this)" data-toggle="modal" data-target="#editOutRecordModal"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i><span></span></button>',
-                    '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i class="glyphicon glyphicon-remove" aria-hidden="true"  ></i><span></span></button>',
+                    '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i class="glyphicon glyphicon-remove" aria-hidden="true"  ></i><span>撤销</span></button>',
                     '</div>'
                 ].join(' ');
             }
         },]
 
-        //function del(obj) {
+        function del(obj) {
 
-        //    FamilyID = obj.parentNode.parentNode.parentNode.previousSibling.previousSibling.innerHTML;
-        //    FamilyName = obj.parentNode.parentNode.parentNode.previousSibling.firstChild.text;
-        //    var id = []  ;
-        //    id[0] = FamilyID;
-        //    var ids = id.join(';');
+            Code = obj.parentNode.parentNode.parentNode.childNodes[2].textContent;
+            SeqID = obj.parentNode.parentNode.parentNode.childNodes[3].textContent;
+            State = "撤销";
+            var record = Code + ";"+SeqID + ";" + State;
+            UpdateRecord("/FixtureScrap/UpdateScrap", "ScrapTable", record);
 
-        //    confirmOrCancelDeleteData("/ManagerFamily/DeleteFamilyRecords", "FamilyTable",ids);
-
-        //}
-
-        //function update(obj) {
-        //    FamilyID = obj.parentNode.parentNode.parentNode.previousSibling.previousSibling.innerHTML;
-        //    FamilyName = obj.parentNode.parentNode.parentNode.previousSibling.firstChild.text;
-        //    var record = FamilyID + ";" + FamilyName;
-        //    c
-        //    UpdateRecord("/ManagerFamily/EditFamilyRecord","FamilyTable", record);
-        //}
+        }
 
 
         /**
@@ -265,7 +174,7 @@
         var TableInit = function () {
             var PurchaseTable = new Object();
 
-            PurchaseTable = BoootstrapTableInit("PurchaseTable", '/FixturePurchase/ReadPurchaseWithUser', rowStyle, columns)
+            PurchaseTable = BoootstrapTableInit("ScrapTable", '/FixtureScrap/ReadScrapWithUser', rowStyle, columns)
             return PurchaseTable;
         }
 
