--- a/Views/FixturePurchase/FirstPass.cshtml
+++ b/Views/FixturePurchase/FirstPass.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>工具夹类别管理</title>
+    <title>采购管理</title>
     <link rel="stylesheet" href="~/Content/bootstrap-table.min.css" />
     <link href="~/Content/diy-bootstraptable.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-editable.css" />
