--- a/Views/FixtureRepair/Apply.cshtml
+++ b/Views/FixtureRepair/Apply.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>采购管理</title>
+    <title>报修管理</title>
     <link rel="stylesheet" href="~/Content/bootstrap-table.min.css" />
     <link href="~/Content/diy-bootstraptable.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-editable.css" />
@@ -32,28 +32,22 @@
         <div>
             <!-- 工具栏 -->
             <div id="toolbar" class="btn-group">
-                <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addPurchaseModal">
+                <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addRepairModal">
                     <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
                     <span>新增</span>
                 </button>
             </div>
-            <table id="PurchaseTable" class="table-striped"></table>
+            <table id="RepairTable" class="table-striped"></table>
             <!-- 添加 modal 框-->
-            <div class="modal fade" id="addPurchaseModal" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal fade" id="addRepairModal" tabindex="-1" role="dialog" aria-hidden="true">
                 <div class="modal-dialog ">
                     <div class="modal-content" sstyle="border-radius:5px">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title" id="myModalLabel">采购申请</h4>
+                            <h4 class="modal-title" id="myModalLabel">报废申请</h4>
                         </div>
                         <div class="modal-body">
                             <form id="addform" class="form-horizontal" action="##" method="post">
-                                <div class="form-group">
-                                    <label class="col-xs-4 control-label" for="familycode">类别代码</label>
-                                    <div class="col-xs-6">
-                                        <input class="form-control" name="familycode" id="familycode" type="text">
-                                    </div>
-                                </div>
                                 <div class=" form-group">
                                     <label class="col-xs-4 control-label" for="code">夹具代码</label>
                                     <div class="col-xs-6">
@@ -71,22 +65,15 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-xs-4 control-label" for="billNo">采购订单号</label>
+                                    <label class="col-xs-4 control-label" for="faultDes">故障描述</label>
                                     <div class="col-xs-6">
-                                        <input class="form-control" name="billNo" id="billNo" type="text">
+                                        <input class="form-control" name="faultDes" id="faultDes" type="text">
                                     </div>
                                 </div>
-                                <div class=" form-group">
-                                    <label class="col-xs-4 control-label" for="regDate">申请日期</label>
-                                    <div class="col-xs-6">
-                                        <input class="form-control datetimepick" name="regDate" id="regDate" type="text">
-                                    </div>
-                                </div>
-                                @* 待修改 *@
                                 <div class="form-group">
-                                    <label class="col-xs-4 control-label" for="pic">图片</label>
+                                    <label class="col-xs-4 control-label" for="faultPic">故障图片</label>
                                     <div class="col-xs-6">
-                                        <input class="form-control" name="pic" id="pic" type="text">
+                                        <input class="form-control" name="faultPic" id="faultPic" type="text">
                                     </div>
                                 </div>
 
@@ -107,9 +94,10 @@
     <script type="text/javascript">
         function addApply() {
             if (CheckFormNull("addform")) {
-                AddRecord("addform", "/FixturePurchase/AddPurChaseRecord", "addPurchaseModal", "PurchaseTable");
+                AddRecord("addform", "/FixtureRepair/AddRepairRecord", "addRepairModal", "RepairTable");
             }
         }
+
 
 
         // 行样式
@@ -122,49 +110,58 @@
         /**
          * 数据列
          * */
-        var columns = [ {
-            field: 'AppBy',
-            title: '用户编号',
+        var columns = [
+             {
+            field: 'RepBy',
+            title: '申请人编号',
             visable: true,
             sortable: true,
             align: 'center',
         }, {
-            field: 'AppByName',
-            title: '用户名',
+            field: 'RepByName',
+            title: '申请人用户名',
             visable: true,
             align: 'center',
-            
+
             }, {
-                field: 'FamilyID',
-                title: '类型编号',
-                visable: true,
-                align: 'center',
-            },{
                 field: 'Code',
                 title: '夹具编号',
                 visable: true,
                 align: 'center',
             }, {
-                field: 'SeqId',
+                field: 'SeqID',
                 title: '夹具序列号',
                 visable: true,
                 align: 'center',
             }, {
-                field: 'BillNo',
-                title: '采购单号',
+                field: 'faultDes',
+                title: '故障描述',
                 visable: true,
                 align: 'center',
             }, {
-                field: 'RegDate',
-                title: '采购时间',
+                field: 'faultPic',
+                title: '故障图片',
                 visable: true,
                 align: 'center',
             }, {
-                field: 'Pic',
-                title: '图片',
+                field: 'DealBy',
+                title: '处理人编号',
                 visable: true,
+                sortable: true,
                 align: 'center',
             }, {
+                field: 'DealByName',
+                title: '处理人用户名',
+                visable: true,
+                align: 'center',
+
+            },
+            {
+                field: 'DealDes',
+                title: '处理描述',
+                visable: true,
+                align: 'center',
+            },    {
                 field: 'State',
                 title: '审查状态',
                 visable: true,
@@ -178,30 +175,30 @@
             formatter: function (value, row, index) {
                 return [
                     '<div class="btn-group">',
-                    '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i class="glyphicon glyphicon-remove" aria-hidden="true"  ></i><span>撤销</span></button>',
+                    '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i class="glyphicon glyphicon-remove" aria-hidden="true"  ></i><span>删除</span></button>',
                     '</div>'
                 ].join(' ');
             }
         },]
 
         function del(obj) {
-            Billno = obj.parentNode.parentNode.parentNode.childNodes[5].textContent;
-            State = "撤销";
-            var record = Billno + ";" + State;
-            UpdateRecord("/FixturePurchase/UpdateState", "PurchaseTable", record);
+
+            Code = obj.parentNode.parentNode.parentNode.childNodes[2].textContent;
+            SeqID = obj.parentNode.parentNode.parentNode.childNodes[3].textContent;
+            var record = Code + ";"+SeqID;
+            confirmOrCancelDeleteData("/FixtureRepair/DeleteRepairRecord", "RepairTable", record);
+
         }
-
-
 
 
         /**
          * table 初始化
          * */
         var TableInit = function () {
-            var PurchaseTable = new Object();
-            
-            PurchaseTable = BoootstrapTableInit("PurchaseTable", '/FixturePurchase/ReadPurchaseWithUser', rowStyle, columns)
-            return PurchaseTable;
+            var RepairTable = new Object();
+
+            RepairTable = BoootstrapTableInit("RepairTable", '/FixtureRepair/ReadRepairWithUser', rowStyle, columns)
+            return RepairTable;
         }
 
         /**
